@@ -1,0 +1,26 @@
+#+OPTIONS: toc:nil, num:nil
+#+TITLE:
+#+HTML_HEAD: <link rel="stylesheet" type="text/css" href="css/style.css" />
+
+Simpletask comes in two different versions on the Play Store. Simpletask and Simpletask Cloudless. Below you can find an overview of the differences between these versions and which one should be for you.
+
+I intend to maintain both versions. Simpletask because that has the userbase. Simpletask Cloudless because that's what I use.
+
+** Simpletask
+
+- Version with built in support for Dropbox syncing. 
+- Todo files are stored in application storage so cleaned up on uninstall
+- Use if you already have a Dropbox account and want a no hassle install which quickly works.
+
+** Simpletask Cloudless
+
+- No built in sync support. Depends on other offerings (such as Dropsync or Foldersync) to sync to a large number of cloud options.
+- Doesn't require INTERNET permission so is acceptable for stringent export
+  laws.
+- Todo files are stored on sdcard (by default in `data/nl.mpcjanssen.simpletask`) so can also be used in offline mode.
+- Will reload the tasklist if an external program changes the todo file.
+- Use this if you want to sync to other cloud options than Dropbox or if you want to use it in offline mode.
+
+** Donate versions
+
+There used to be donate versions in the playstore as well, but because they are exactly the same as the free version, they were becoming a hassle to maintain. If you want to donate, you can find a donation link in the settings.
