@@ -1,0 +1,64 @@
+<?xml version="1.0" encoding="utf-8"?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+"http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
+<head>
+<title></title>
+<!-- 2014-02-09 zo 23:12 -->
+<meta  http-equiv="Content-Type" content="text/html;charset=utf-8" />
+<meta  name="generator" content="Org-mode" />
+<link rel="stylesheet" type="text/css" href="css/style.css" />
+</head>
+<body>
+<div id="content">
+<h1 class="title"></h1>
+<p>
+Simpletask comes in two different versions on the Play Store. Simpletask and Simpletask Cloudless. Below you can find an overview of the differences between these versions and which one should be for you.
+</p>
+
+<p>
+I intend to maintain both versions. Simpletask because that has the userbase. Simpletask Cloudless because that's what I use.
+</p>
+
+<div id="outline-container-sec-1" class="outline-2">
+<h2 id="sec-1">Simpletask</h2>
+<div class="outline-text-2" id="text-1">
+<ul class="org-ul">
+<li>Version with built in support for Dropbox syncing. 
+</li>
+<li>Todo files are stored in application storage so cleaned up on uninstall
+</li>
+<li>Use if you already have a Dropbox account and want a no hassle install which quickly works.
+</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-sec-2" class="outline-2">
+<h2 id="sec-2">Simpletask Cloudless</h2>
+<div class="outline-text-2" id="text-2">
+<ul class="org-ul">
+<li>No built in sync support. Depends on other offerings (such as Dropsync or Foldersync) to sync to a large number of cloud options.
+</li>
+<li>Doesn't require INTERNET permission so is acceptable for stringent export
+laws.
+</li>
+<li>Todo files are stored on sdcard (by default in `data/nl.mpcjanssen.simpletask`) so can also be used in offline mode.
+</li>
+<li>Will reload the tasklist if an external program changes the todo file.
+</li>
+<li>Use this if you want to sync to other cloud options than Dropbox or if you want to use it in offline mode.
+</li>
+</ul>
+</div>
+</div>
+<div id="outline-container-sec-3" class="outline-2">
+<h2 id="sec-3">Donate versions</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+There used to be donate versions in the playstore as well, but because they are exactly the same as the free version, they were becoming a hassle to maintain. If you want to donate, you can find a donation link in the settings.
+</p>
+</div>
+</div>
+</div>
+</body>
+</html>
